--- a/localisation/english/PB_WWW_l_english.yml
+++ b/localisation/english/PB_WWW_l_english.yml
@@ -144,6 +144,9 @@
   trait_NWA_Anarchistic_Fervour:0 "Anarchistic Fervour"
   trait_NWA_Anarchistic_Fervour_desc:0 "The fires of revolution burn bright amongst the minds of this military committee."
 
+  trait_chaos_tribal:0 "Disunited Tribal Command"
+  trait_chaos_tribal_desc:0 "Due to missing chain of command and solid leadership there is high incoordination and autonomy."
+
   ##########################
   # COSMETIC
   ##########################
