--- a/localisation/english/PB_annexations.yml
+++ b/localisation/english/PB_annexations.yml
@@ -18,11 +18,13 @@
  #annexation_example: "The Fate of Example"
  #annexation_example_desc: "The region of Example has been brought under our control as our troops occupy the region. We must now decide what to do with it."
 
+  # EUROPE
+
   annexation_decision_portugal: "The Fate of Portugal"
   annexation_decision_portugal_desc: "The region of Portugal has been brought under our control as our troops occupy the region. We must now decide what to do with it."
 
-  annexation_portugal: "T"
-  annexation_portugal_desc: ""
+  annexation_portugal: "The Fate of Portugal"
+  annexation_portugal_desc: "The region of Portugal has been brought under our control as our troops occupy the region. We must now decide what to do with it."
   annexation.1016.a: "Establish a Portuguese Republic"
   annexation.1016.b: "Restore the Portuguese Braganza Monarchy"
   annexation.1016.c: "Return it to the Exiled Monarchy"
@@ -31,6 +33,15 @@
 
   annexation_decision_galicia: "The Fate of Galicia"
   annexation_decision_galicia_desc: "The region of Galicia has been brought under our control as our troops occupy the region. We must now decide what to do with it."
+
+  # AMERICA
+
+  annexation_decision_acadia: "Fate of Acadia"
+  annexation_decision_acadia_desc: "The region of Acadia has been brought under our control as our troops occupy the region. We must now decide what to do with it."
+
+  annexation_acadia: "The Fate of Acadia"
+  annexation_acadia_desc: "The region of Acadia has been brought under our control as our troops occupy the region. We must now decide what to do with it."
+  annexation.1100.a: "Liberate Acadia"
 
 
 #Events
