small swiss map things

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  STATE_1: "Corsica"
  STATE_2: "Latium"
- STATE_3: "Western Switzerland"
+ STATE_3: "Western Cantons"
  STATE_4: "Lower Austria"
  STATE_5: "Ostpreußen"
  STATE_6: "Vlaanderen"
@@ -149,7 +149,7 @@
  STATE_148: "Lappi"
  STATE_149: "Österbotten"
  STATE_150: "Savolax"
- STATE_151: "Eastern Switzerland"
+ STATE_151: "Eastern Cantons"
  STATE_152: "Upper Austria"
  STATE_153: "Tyrol"
  STATE_154: "Alföld"
@@ -938,7 +938,7 @@
  STATE_937: "Salamanca"
  STATE_938: "Guadalajara"
  STATE_939: "Cuzco"
- STATE_940: "Romande"
+ STATE_940: "Geneva & Vaud"
  STATE_941: "Kansas"
  STATE_942: "Freetown"
  STATE_943: "Rainy River"
@@ -969,8 +969,8 @@
  STATE_968: "Mari"
  STATE_969: "Mordovia"
  STATE_970: "San Marino"
- STATE_971: "Grisons"
- STATE_972: "Nauchatel"
+ STATE_971: "Graubünden"
+ STATE_972: "Neuchâtel"
  STATE_973: "Channel Islands"
  STATE_974: "Heligoland"
  STATE_975: "Putamayo"
