--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -7,8 +7,10 @@
  VICTORY_POINTS_11846: "Anzio"
  VICTORY_POINTS_9904: "Rome"
 #3 - WESTERN SWITZERLAND
- VICTORY_POINTS_9638: "Basel"
+ VICTORY_POINTS_15787: "Basel"
  VICTORY_POINTS_9620: "Berne"
+ VICTORY_POINTS_9618: "Thun"
+ VICTORY_POINTS_11590: "Fribourg"
 #4 - LOWER AUSTRIA
  VICTORY_POINTS_9648: "Graz"
  VICTORY_POINTS_11666: "Vienna"
@@ -485,9 +487,11 @@
  VICTORY_POINTS_3125: "Kajana"
  VICTORY_POINTS_11141: "Kuopio"
 #151 - EASTERN SWITZERLAND
- VICTORY_POINTS_663: "Zürich"
+ VICTORY_POINTS_15600: "Zürich"
  VICTORY_POINTS_15786: "Sankt Gallen"
  VICTORY_POINTS_15789: "Schaffhausen"
+ VICTORY_POINTS_663: "Winterthur"
+ VICTORY_POINTS_11601: "Lucerne"
 #152 - UPPER AUSTRIA
  VICTORY_POINTS_3673: "Klagenfurt"
  VICTORY_POINTS_9665: "Linz"
@@ -2587,8 +2591,9 @@
 #939 - CUZCO
  VICTORY_POINTS_5166: "Cuzco"
 #940 - ROMANDE
- VICTORY_POINTS_6666: "Geneva"
- VICTORY_POINTS_13275: "Lausanne"
+ VICTORY_POINTS_13362: "Geneva"
+ VICTORY_POINTS_6666: "Lausanne"
+ VICTORY_POINTS_9622: "Biel"
 #941 - KANSAS
  VICTORY_POINTS_4444: "Forest City"
  VICTORY_POINTS_1806: "New Charleston"
@@ -2679,8 +2684,11 @@
 #969 - MORDOVIA
  VICTORY_POINTS_6391: "Saransk"
 #970 - SAN MARINO
-#971 - GRISONS
-#972 - NAUCHATEL
+#971 - GRAUBUNDEN
+ VICTORY_POINTS_15785: "Chur"
+ VICTORY_POINTS_3662: "St. Moritz"
+#972 - NEUCHATEL
+ VICTORY_POINTS_13363: "Neuchâtel"
 #973 - CHANNEL ISLANDS
  VICTORY_POINTS_13359: "Saint Helier"
 #974 - HELIGOLAND
@@ -3855,8 +3863,6 @@
  VICTORY_POINTS_12371:0 "Franz Joseph Stadt"
  VICTORY_POINTS_12154:0 "Madang"
  VICTORY_POINTS_7859:0 "Canberre"
- VICTORY_POINTS_9638:0 "Basel"
- VICTORY_POINTS_6666:0 "Geneva"
  VICTORY_POINTS_7798:0 "Boatrocker Brewer"
  VICTORY_POINTS_12406:0 "Sydney"
  VICTORY_POINTS_7520:0 "Montalembert"
