dutch rework (again)

--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -604,22 +604,23 @@
   NZL_rc_party_long:0 "-"
 
 
-  HOL_cn_party_long:0 "Christelijk-Democratische Unie"
+  HOL_cn_party_long:0 "Christelijk-Democratische Unie\n§gThe CDU (§!§4Christian Democratic Union§!§g)\nThe party was formed from a merger of the multiple Catholic and Protestant parties that previously existed in the Free Provinces. Its conservative§! §OOrangist§! §gwing is led by Wilhelmina, the sole surviving descendant of the last stadtholder Willem VI. She has long been an outspoken proponent of free elections and women's suffrage, being a key player in the movement to establish a fully democratic government. However her opponents regularly accuse her of trying to reclaim the birthright she was robbed of so long ago, when the rumours of her illegitimacy led to the position of Stadhouder to be abolished. If either of these rumours are true is yet to be seen. The left wing of the CDU are called the§! §RMusteites§!§g. Formerly the Protestant People’s Party, who make up the CDU’s left wing. They are led by the famed A. J. Muste. They have a special kind of social-conservatism not often seen in the Republic, but it has become popular with the people over the years, as their success in provincial elections have shown.§!\n"
   HOL_cn_party:0 "CDU"
-  HOL_ss_party_long:0 "Sociaal-Democratische Partij"
-  HOL_ss_party:0 "SDP"
-  HOL_lb_party_long:0 "Liberale Unie"
-  HOL_lb_party:0 "LU"
-  HOL_jc_party_long:0 "Revolutionair-Socialistische Arbeiderspartij"
-  HOL_jc_party:0 "RSAP"
-  HOL_rc_party_long:0 "Alliantie van Nationale Wederopbouw"
-  HOL_rc_party:0 "AvNW"
-  HOL_ni_party_long:0 "Nieuwe Nassau Partij"
-  HOL_ni_party:0 "NNP"
-  HOL_ds_party_long:0 "Nationale Beweging"
-  HOL_ds_party:0 "NB"
-  HOL_an_party_long:0 "Vrijzinnig-Democratische Bond"
-  HOL_an_party:0 "VDB"
+  HOL_ss_party_long:0 "Protestantse Volkspartij\n§gThe PVP (§!§RProtestant People's Party§!§g)\nis a Radical-Egalitarian party that has a strong connection with the church. It is made up of a lot of the catholic politicians from the south. It was formed as a merger of several socialists parties and took in refugees from the CDU merger where alot of Catholics felt underrepresented and so flocked to the the PVP.§!\n"
+  HOL_ss_party:0 "PVP"
+  HOL_lb_party_long:0 "Boerenpartij\n§gThe BP (§!§GFarmersparty§!§g)\nis a Liberal party that was formed in opposition to expansion of monopolistic agricorps, the Farmers Party primarily represents rural interests in the north of the country but in recent years has been making sweeping gains nationwide. They retain an ambivalence toward the encroachment of new technologies, fearing it will uproot their long-established way of life. Similarly they harbour suspicions of so-called “urban elites” whom they claim look down on them with distain.§!\n"
+  HOL_lb_party:0 "BP"
+  HOL_jc_party_long:0 "Patriotten\n§gThe Patriotten (§!§tPatriots§!§g)\nA jacobin movement dating back all the way to the late 18th century, and inspired by a similar French movement from the same time. Back in 1790 they managed to secure their rule over the Republic by overthrowing the then Stadhouder §!§OWillem V§!§g. They quickly become popular with the populace, and with support from France successfully partitions the Austrian Netherlands between the two powers. However their power is short lasting, as in 1808, the Stadhouder returns with the Prussian army and gets rid of the Patriotten who flee to France. There were a few attempts by the Patriotten to retake control once more of the Republic, but both attempts in 1815 and 1823 were unsuccessful. After the appointment of Thorbecke by the Stadhouder, in 1853, the Patriotten split into three factions. A radical, a moderate and a liberal wing. The moderates called themselves §!§9the Middenlijners§!§g (Middle Liners), the radicals \n§!§RThe Rode Kameraden§!§g (Red Comrades) and the liberals the §7Zwolle Kliek§! (Zwolle Clique).\nWhen the Patriotten were finally victorious in the struggle against the Stadhouder in 1866 during \n§!§Cthe Sapphire Revolution§!§g the three sides decided to work together for the time being while everything was being settled. Though they had their obvious troubles with each other, the three sides cooperated. However when the §!§1Guild Coup§!§g occurred in 1891 and the Patriotten had to go into hiding, troubles between the three camps flared up again. Luckily for them famed revolutionary Henk Sneevliet managed to unite them for now...§!\n"
+  HOL_jc_party:0 "Patriotten"
+  HOL_rc_party_long:0 "Regenten\n§gThe Regenten (§!§1Merchants§!§g)\nare a political union of the merchant class. etc.§!\n"
+  HOL_rc_party:0 "Regenten"
+  HOL_ni_party_long:0 "Der Vaderen Erfdeel\n§gThe DVE (§!§6The Fathers Inheritance§!§g),\nis a Neo-Imperialist political movement etc.§!\n"
+  HOL_ni_party:0 "DVE"
+  HOL_ds_party_long:0 "Alliantie van Nationale Wederopbouw\n§gThe AvnW (§!§OAlliance for National Reconstruction§!§g)\nis a political movement Despotic in nature and led by mostly military men. The Alliance for National Reconstruction doesn’t easily fit the mould of a conventional political party. Instead it could be considered a hybrid of a pressure group and military conspiracy representing an ultraconservative faction of the armed forces. Those in the Alliance remain loyal to the deposed House of §!§OOrange-Nassau§!§g and aim to restore the hereditary stadholderate which was abolished under the §!§RDecember Coup§!§g, and perhaps even refigure it into something greater than it once was…§!\n"
+  HOL_ds_party:0 "AvNW"
+  HOL_an_party_long:0 "Vrije Liberalen Bond\n§gThe VLB (§!§YFree Liberal Union§!§g)\nis a party with a strongly cosmopolitan support base, the Free Liberal League has among its members many of the §!§1Regenten§!§g class who became discontented by the established order’s reluctance to reform and embrace the new ideals of the twentieth century. Among its key policies are support for laissez-faire economics, technological progress and the free expression of the individual.§!\n"
+  HOL_an_party:0 "VLB"
+
 
   BRT_ss_party_long:0 "Strollad Emrenerien Vreiz"
   BRT_ss_party:0 "SEV"
