Random stuff + Central America

--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -1990,15 +1990,15 @@
     HON_cn_DEF:0 "The Republic of Honduras"
     HON_lb:0 "Honduras"
     HON_lb_DEF:0 "The Republic of Honduras"
-    HON_ss:0 "Honduras"
-    HON_ss_DEF:0 "The Republic of Honduras"
-    HON_jc:0 "Honduras"
-    HON_jc_DEF:0 "The Republic of Honduras"
+    HON_ss:0 "Consulate of Cuzcatlan"
+    HON_ss_DEF:0 "The Consulate of Cuzcatlan"
+    HON_jc:0 "Consulate of Cuzcatlan"
+    HON_jc_DEF:0 "The Consulate of Cuzcatlan"
     HON_ni_ADJ:0 "Honduran"
     HON_rc_ADJ:0 "Honduran"
     HON_lb_ADJ:0 "Honduran"
-    HON_ss_ADJ:0 "Honduran"
-    HON_jc_ADJ:0 "Honduran"
+    HON_ss_ADJ:0 "Pipiles"
+    HON_jc_ADJ:0 "Pipiles"
     HON_ds_ADJ:0 "Honduran"
     HON_cn_ADJ:0 "Honduran"
     HON_an_ADJ:0 "Honduran"
