Minor Sweden stuff
ye

--- a/localisation/english/PB_country_specific/PB_Peru_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Peru_l_english.yml
@@ -28,4 +28,4 @@
   ##########################
   
   PB_CHR_Pride_Real:0 "Pride of the Royal Army"
-  PB_HAI_1804_Legacy_desc:0 "WIP"
+  PB_CHR_Pride_Real_desc:0 "WIP"
