--- a/localisation/english/PB_Imperial_Civil_War_l_english.yml
+++ b/localisation/english/PB_Imperial_Civil_War_l_english.yml
@@ -16,7 +16,7 @@
   PM_AME_American_Northwest_Investment:0 "Invest In The Northwest Territories"
   PM_AME_American_African_Investment:0 "Invest In The Saharan Colonies"
   PM_AME_American_Quebec_Investment:0 "Invest In Quebec"
-  PM_AME_American_Victoria_Investment:0 "Promote American-Victorian Pacific Trade"
+  PM_AME_American_New_Georgia_Investment:0 "Promote American-New Georgian Pacific Trade"
   PM_AME_American_Hong_Kong_Investment:0 "Reinforce The Pearl River Dominion"
   PM_AME_American_BAF_Investment:0 "Promote Trade With The British African Authority"
   PM_AME_American_East_Africa_Investment:0 "Reinforce American Interests In East Africa"
@@ -29,7 +29,7 @@
   PM_AME_American_Quebec_Binding:0 "Binding Quebec to America"
   PM_AME_American_Northwest_Binding:0 "Binding the Northwest to America"
   PM_AME_American_African_Binding:0 "Binding the Sahara to America"
-  PM_AME_American_Victoria_Binding:0 "Binding Victoria to America"
+  PM_AME_American_New_Georgia_Binding:0 "Binding New Georgia to America"
   PM_AME_American_Hong_Kong_Binding:0 "Binding the Pearl River to America"
   PM_AME_American_BAF_Binding:0 "Binding West Africa to America"
   PM_AME_American_Acadiana_Binding:0 "Binding Acadia to America"
@@ -41,7 +41,7 @@
   PM_ENG_Northwest_Investment:0 "Invest In the Northwest Territories"
   PM_ENG_Saharan_Investment:0 "Increase investment In The Sahara Project"
   PM_ENG_Quebec_Investment:0 "Invest In Quebec"
-  PM_ENG_Victoria_Investment:0 "Reinforce Anglo-Victorian Trade Ties"
+  PM_ENG_New_Georgia_Investment:0 "Reinforce Anglo-New Georgian Trade Ties"
   PM_ENG_Hong_Kong_Investment:0 "Secure Our Foothold In Asia"
   PM_ENG_BAF_Investment:0 "Offer Economic Incentives To The BAF"
   PM_ENG_East_Africa_Investment:0 "Consolidate Our Position In East Africa"
@@ -90,9 +90,9 @@
   WAF_Republic_DEF:0 "the Free State of Carnegia"
   WAF_Republic_ADJ:0 "Afro-European"
 
-  VIC_Republic:0 "Victorian Republic"
-  VIC_Republic_DEF:0 "the Victorian Republic"
-  VIC_Republic_ADJ:0 "Australian"
+  CNG_Republic:0 "New Georgian Republic"
+  CNG_Republic_DEF:0 "the New Georgian Republic"
+  CNG_Republic_ADJ:0 "Australian"
 
   BCL_Republic:0 "Free Provinces of Borealia"
   BCL_Republic_DEF:0 "the Free Provinces of Borealia"
@@ -298,8 +298,8 @@
   ImpCiv_War.6.d:0 "The former French territory of Acadia has been successfully integrated into the Imperial Federation."
   ImpCiv_War.6.a:0 "Excellent."
 
-  ImpCiv_War.7.t:0 "Victoria Integrated"
-  ImpCiv_War.7.d:0 "The former Commonwealth of Victoria is now being integrated into the British Imperial Federation. Negotiations have been ongoing for several months, with both sides discussing the terms of the integration. The integration is expected to be beneficial for both parties, as it will create new opportunities for trade and cultural exchange, and will help to strengthen the ties between the former Commonwealth of Victoria and the British Empire."
+  ImpCiv_War.7.t:0 "New Georgia Integrated"
+  ImpCiv_War.7.d:0 "The former Commonwealth of New Georgia is now being integrated into the British Imperial Federation. Negotiations have been ongoing for several months, with both sides discussing the terms of the integration. The integration is expected to be beneficial for both parties, as it will create new opportunities for trade and cultural exchange, and will help to strengthen the ties between the former Commonwealth of New Georgia and the British Empire."
   ImpCiv_War.7.a:0 "Excellent."
 
   ImpCiv_War.8.t:0 "America Integrated"
@@ -338,8 +338,8 @@
   PB_ImpMan_Increase_WAF_AME_Influence_tt:0 "Carnegia will become more §bAmerican Aligned§!"
   PB_ImpMan_Increase_WAF_ENG_Influence_tt:0 "Carnegia will become more §rBritish Aligned§!"
 
-  PB_ImpMan_Increase_VIC_AME_Influence_tt:0 "Victoria will become more §bAmerican Aligned§!"
-  PB_ImpMan_Increase_VIC_ENG_Influence_tt:0 "Victoria will become more §rBritish Aligned§!"
+  PB_ImpMan_Increase_CNG_AME_Influence_tt:0 "New Georgia will become more §bAmerican Aligned§!"
+  PB_ImpMan_Increase_CNG_ENG_Influence_tt:0 "New Georgia will become more §rBritish Aligned§!"
 
   PB_ImpMan_Increase_BCL_AME_Influence_tt:0 "The Northwest Territories will become more §bAmerican Aligned§!"
   PB_ImpMan_Increase_BCL_ENG_Influence_tt:0 "The Northwest Territories will become more §rBritish Aligned§!"
@@ -371,8 +371,8 @@
   ENG_WAF_Blocked_tt:0 "§rBritian§! will be §Rblocked§! from further influencing Carnegia"
   ENG_WAF_Blocked_explain_tt:0 "§YNot:§! Carnegia is §Rbound§! to §bAmerica§!"
 
-  ENG_VIC_Blocked_tt:0 "§rBritian§! will be §Rblocked§! from further influencing Victoria"
-  ENG_VIC_Blocked_explain_tt:0 "§YNot:§! Victoria is §Rbound§! to §bAmerica§!"
+  ENG_CNG_Blocked_tt:0 "§rBritian§! will be §Rblocked§! from further influencing New Georgia"
+  ENG_CNG_Blocked_explain_tt:0 "§YNot:§! New Georgia is §Rbound§! to §bAmerica§!"
 
   ENG_HNK_Blocked_tt:0 "§rBritian§! will be §Rblocked§! from further influencing the Pearl River Dominion"
   ENG_HNK_Blocked_explain_tt:0 "§YNot:§! The Pearl River Dominion is §Rbound§! to §bAmerica§!"
@@ -397,7 +397,7 @@
 
   ImpManagement_Waf_80_tt:0 "Carnegian Alignment is greater then §b80%§!"
 
-  ImpManagement_Vic_80_tt:0 "Victorian Alignment is greater then §b80%§!"
+  ImpManagement_CNG_80_tt:0 "New Georgian Alignment is greater then §b80%§!"
 
   ImpManagement_Hnk_80_tt:0 "Pearl River Alignment is greater then §b80%§!"
 
@@ -411,7 +411,7 @@
 
   AME_Impending_Imperial_Civil_War_tt:0 "A series of events will fire which will eventually kickstart the §RImperial Civil War§!.\n\nAmerican aligned states will form a counter faction against Britain, America only needs to secure the eastern seaboard and hold out for one year for a scripted peace to fire, alternatively America can invade Britain where should they be succesful they can demand additional territories."
 
-  Imp_War_AME_Vic_tt:0 "The §YUnited Commonwealth§! and its allies will sign a peace deal with §RBritain§! which will see the transfer of some British colonial lands to the UC and a total seperation of all §YC.I.S§! members from British affairs."
+  Imp_War_AME_CNG_tt:0 "The §YUnited Commonwealth§! and its allies will sign a peace deal with §RBritain§! which will see the transfer of some British colonial lands to the UC and a total seperation of all §YC.I.S§! members from British affairs."
 
   ENG_Imperial_Federation_Coring_Begin_tt:0 "§YWith this decision, the Imperial Federation is signed into existence, although we will not have all lands fully integrated upon creation. Events will appear over the course of the subsequent year fully integrating our former Commonwealths.§!"
 
