--- a/localisation/english/PB_country_specific/PB_Switzerland_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Switzerland_l_english.yml
@@ -49,6 +49,13 @@
   PB_SWI_databank_world_3: "The Leaking Databank"
   PB_SWI_databank_world_3_desc: "WIP"
 
+  PB_SWI_databank_world_4: "Stabilized Databank"
+  PB_SWI_databank_world_4_desc: ""
+
+  PB_SWI_automation_strikes: "Anti-Automation Strikes"
+
+  PB_SWI_catholic_act_idea: "Catholic Government Act"
+
   PB_SWI_confederation: "Swiss Confederacy"
 
   ### CIVIL WAR ###
@@ -73,11 +80,31 @@
 
   swicon.2.t: "Automation Crisis Hits Switzerland"
   swicon.2.d: "WIP"
-  swicon.2.a: "Stick with Heinrich!"
+  swicon.2.a: "The system is leaking."
 
   swicon.3.t: "Talks With the BGBP"
   swicon.3.d: "WIP"
   swicon.3.a: "Stick with Heinrich!"
+
+  swicon.4.t: "Anti-Automation Strikes"
+  swicon.4.d: "WIP"
+  swicon.4.a: "Stick with Heinrich!"
+
+  swicon.5.t: "Dealing with the Strikes"
+  swicon.5.d: "WIP"
+  swicon.5.a: "Have them arrested!"
+  swicon.5.b: "Let us negotiate."
+  swicon.5.c: "Give them what they want!"
+
+  swicon.6.t: "The Swiss Confederacy approaches us"
+  swicon.6.d: "WIP"
+  swicon.6.a: "Stick with Heinrich!"
+
+  swicon.10.t: "The Swiss Civil War!"
+  swicon.10.d: "WIP"
+  swicon.10.a: "Down with the Catholics!"
+
+  
 
 ###############
 ### FOCUS TREE
@@ -85,11 +112,16 @@
 
 SWI_33_elections: "The 1933 Elections Have Concluded"
 SWI_auto_crisis: "The Automation Crisis Has Hit Switzerland"
+SWI_ongoing_strikes: "Anti-Automation Strikes Are Taking Place"
+SWI_strikers_deal: "The Strikers Have Been Dealt With"
+SWI_finished_constitution: "Finished Drafting Constitution"
 
 SWI_draft_constitution_decisions: "§YUnlocks§! £decision_icon_small decisions to begin drafting the constitution"
 SWI_lower_bund_tensions: "§GThis will lower Bund tensions.§!"
 SWI_higher_bund_tensions: "§RThis will increase Bund tensions.§!"
 SWI_drastic_bund_tensions: "§RThis will drastically increase Bund tensions.§!"
+
+SWI_stop_leaking_tt: "§tThis will greatly upset the workers.§Y"
 
 PB_SWI_elections: "Elections of 33'"
 PB_SWI_elections_desc: ""
@@ -111,3 +143,18 @@ PB_SWI_stop_leaking_desc: ""
 
 PB_SWI_address_strikers: "Address the Strikers"
 PB_SWI_address_strikers_desc: ""
+
+PB_SWI_recover_from_crisis: "Back in Business"
+PB_SWI_recover_from_crisis_desc: ""
+
+PB_SWI_expand_voting: "Expand the Vote"
+PB_SWI_expand_voting_desc: ""
+
+PB_SWI_negotiate_habsburgs: "Negotiate with the Habsburgs"
+PB_SWI_negotiate_habsburgs_desc: ""
+
+PB_SWI_catholic_act: "The Catholic Government Act"
+PB_SWI_catholic_act_desc: ""
+
+PB_SWI_implement_constitution: "Implement the Constitution"
+PB_SWI_implement_constitution_desc: ""
