SCA standardization + fixes + new things

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1089,6 +1089,7 @@
  VICTORY_POINTS_13392: "Annapolis"
  VICTORY_POINTS_9786: "Port Atlantic"
  VICTORY_POINTS_6984: "Baltimore"
+ VICTORY_POINTS_6984_washington: "Washington"
  VICTORY_POINTS_6929: "Frederick"
  VICTORY_POINTS_3957: "Georgetown"
  VICTORY_POINTS_14532: "Shelburne"
@@ -2492,7 +2493,9 @@
  VICTORY_POINTS_7865: "Snaketon"
 #896 - OREGON COAST
  VICTORY_POINTS_505: "Gangkou"
+ VICTORY_POINTS_505_sca: "Libertville"
  VICTORY_POINTS_11495: "Hóngyè"
+ VICTORY_POINTS_11495_sca: "Borderlands"
 #897 - NORTH OREGON
  VICTORY_POINTS_4328: "Pleasant"
  VICTORY_POINTS_3513: "Waldenia"
