Swedish & Peruvian ideas 'n stuff

--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -982,15 +982,15 @@
   SWE_ss_party:0 "SEP"
   SWE_ss_party_long:0 "Sveriges Egalitariska Parti"
   SWE_jc_party:0 "SJS"
-  SWE_jc_party_long:0 "Svenska Jakobinska Samling"
+  SWE_jc_party_long:0 "Svenska Jakobinska Samlingen"
   SWE_rc_party:0 "SNF"
   SWE_rc_party_long:0 "Sveriges Nationella Förbund"
   SWE_ni_party:0 "NA"
   SWE_ni_party_long:0 "Nationella Arbetarsförbundet"
   SWE_ds_party:0 "K"
   SWE_ds_party_long:0 "Kronpartiet"
-  SWE_an_party:0 "KL"
-  SWE_an_party_long:0 "Kreuger Lobbyists"
+  SWE_an_party:0 "F"
+  SWE_an_party_long:0 "Folkpartiet"
 
   ATC_ss_party:0 "PPA"
   ATC_ss_party_long:0 "Partido Popular de las Antillas"
@@ -1164,11 +1164,11 @@
   SLK_cn_party:0 "Borgaralliansen"
   SLK_ds_party:0 "Generalguvernören"  
   SLK_rc_party:0 "Faderlandsfronten"
-  SLK_ss_party:0 "Arbetarsförbundet"
+  SLK_ss_party:0 "Folkförbundet"
   SLK_an_party:0 "Kreuger Lobbyists"
   SLK_ni_party:0 "Gustavianska Partiet"
   SLK_jc_party:0 "Australiens Republianska Armé"
-  SLK_lb_party:0 "Folkpartiet"
+  SLK_lb_party:0 "Liberala Samlingspartiet"
 
   ITA_cn_party:0 "DC"
   ITA_cn_party_long:0 "Democrazia Cristiana"
