--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -996,7 +996,7 @@
  STATE_995: "Arica"
  STATE_996: "Antofagasta"
  STATE_997: "Aracuania"
- STATE_998: "Tierra del Fuego"
+ STATE_998: "Fireland"
  STATE_999: "Corrientes"
  STATE_1000: "Campos del Norte"
  STATE_1001: "Formosa"
@@ -1155,7 +1155,7 @@
  STATE_1154: "King Edward VII Land"
  STATE_1155: "Saunders Coast"
  STATE_1156: "Hobbs Coast"
- STATE_1157: "Walgreen Coast"
+ STATE_1157: "Tierra de San Telmo"
  STATE_1158: "Eights Coast"
  STATE_1159: "Palmer Land"
  STATE_1160: "Ronne Ice Shelf"
