--- a/localisation/english/PB_country_specific/PB_Sweden_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Sweden_l_english.yml
@@ -20,3 +20,8 @@
   
   PB_SWE_Riket_Two:0 "Den Östra Rikshalvan"
   PB_SWE_Riket_Two_desc:0 ""Finns! Brothers! Your achievements are great, and the gratitude I express to you on behalf of all is just as great. – To interpret this would require an orator with all his skill – But I am a soldier. – Soldier! What a proud title! When I bear this title, by you – for you – and with you!" \n\n- §YC.G.E Mannerheim§!"
+  PB_SWE_Swedish_Zaibatsu:0 "The Affärsimperium"
+  PB_SWE_Swedish_Zaibatsu_desc:0 "WIP"
+  PB_SWE_Not_Flickering:0 "A Flickering Democracy"
+  PB_SWE_Not_Flickering_desc:0 "WIP"
+  
