Spanish America standardization & some generals

--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -1039,6 +1039,12 @@
   SNG_ds_party:0 "Colonial Administration"
   SNG_ds_party_long:0 "Free Singapore Colonial Administration"
 
+  VEN_ds_party:0 "Casa de Miranda"
+  VEN_ds_party_long:0 "Casa de Miranda"
+
+  RLP_cn_party:0 "Partido Conservador"
+  RLP_cn_party_long:0 "Partido Conservador Popular"
+
   KOR_jc_party:0 "S"
   KOR_jc_party_long:0 "Saegugmindang"
   KOR_ss_party:0 "S"
