Some stuff... thats it
h

--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -2028,22 +2028,22 @@
     ELS_cn_ADJ:0 "El Salvadoran"
     ELS_an_ADJ:0 "El Salvadoran"
 
-    NWG_ni:0 "Dual Monarchy"
-    NWG_ni_DEF:0 "The Dual Monarchy of New Granada and Hispaniola"
-    NWG_ds:0 "Dual Monarchy"
-    NWG_ds_DEF:0 "The Dual Monarchy of New Granada and Hispaniola"
-    NWG_rc:0 "Dual Monarchy"
-    NWG_rc_DEF:0 "The Dual Monarchy of New Granada and Hispaniola"
-    NWG_an:0 "Dual Monarchy"
-    NWG_an_DEF:0 "The Dual Monarchy of New Granada and Hispaniola"
-    NWG_cn:0 "Dual Monarchy"
-    NWG_cn_DEF:0 "The Dual Monarchy of New Granada and Hispaniola"
-    NWG_lb:0 "Dual Monarchy"
-    NWG_lb_DEF:0 "The Dual Monarchy of New Granada and Hispaniola"
-    NWG_ss:0 "Dual Monarchy"
-    NWG_ss_DEF:0 "The Dual Monarchy of New Granada and Hispaniola"
-    NWG_jc:0 "Dual Monarchy"
-    NWG_jc_DEF:0 "The Dual Monarchy of New Granada and Hispaniola"
+    NWG_ni:0 "United Viceroyalties"
+    NWG_ni_DEF:0 "The United Viceroyalties of New Granada & New Spain"
+    NWG_ds:0 "United Viceroyalties"
+    NWG_ds_DEF:0 "The United Viceroyalties of New Granada and New Spain"
+    NWG_rc:0 "United Viceroyalties"
+    NWG_rc_DEF:0 "The United Viceroyalties of New Granada and New Spain"
+    NWG_an:0 "United Viceroyalties"
+    NWG_an_DEF:0 "The United Viceroyalties of New Granada and New Spain"
+    NWG_cn:0 "United Viceroyalties"
+    NWG_cn_DEF:0 "The United Viceroyalties of New Granada and New Spain"
+    NWG_lb:0 "United Viceroyalties"
+    NWG_lb_DEF:0 "The United Viceroyalties of New Granada and New Spain"
+    NWG_ss:0 "United Viceroyalties"
+    NWG_ss_DEF:0 "The United Viceroyalties of New Granada and New Spain"
+    NWG_jc:0 "United Viceroyalties"
+    NWG_jc_DEF:0 "The United Viceroyalties of New Granada and New Spain"
     NWG_ni_ADJ:0 "Imperial Spanish"
     NWG_rc_ADJ:0 "Imperial Spanish"
     NWG_lb_ADJ:0 "Imperial Spanish"
