--- a/localisation/english/PB_country_specific/PB_Free_Settlements_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Free_Settlements_l_english.yml
@@ -24,3 +24,7 @@
   ##########################
   # IDEAS
   ##########################
+
+  PB_RLP_Cordoba_Realista:0 "The Unfinished Counterrevolution"
+  PB_RLP_Cordoba_Realista_desc:0 "WIP"
+  
