--- a/localisation/english/PB_Opinion_Modifiers_l_english.yml
+++ b/localisation/english/PB_Opinion_Modifiers_l_english.yml
@@ -23,3 +23,4 @@
   royal_outreach:0 "Royal Intervention"
   angloi_disaster:0 "Anglois Crisis Disaster"
   royal_ties:0 "Royal Ties"
+  tsars_crime:0 "Crimes of the Tsar"
