Sweden Standardization & stuff
h

--- a/localisation/english/PB_country_specific/PB_Sweden_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Sweden_l_english.yml
@@ -5,6 +5,22 @@
   ######################
 
   ### LEADERS ###
+  SWE_viktoria_i: "Viktoria I"
+  SWE_sven_lindholm: "Sven Olov Lindholm"
+
+  ### FIELD MARSHALS ###
+  SWE_olof_thornell: "Olof Thörnell"
+
+  ### GENERALS ###
+  SWE_archibald_douglas: "Archibald Douglas"
+  SWE_ivar_gevert: "Ivar Gevert"
+  SWE_ernst_linder: "Ernst Linder"
+  SWE_hilding_kring: "Hilding Kring"
+  SWE_hugo_osterman: "Hugo Österman"
+  SWE_axel_rappe: "Axel Rappe"
+  SWE_helge_jung: "Helge Jung"
+  SWE_alf_meyerhoffer: "Alf Meyerhöffer"
+  SWE_carl_ehrensvard: "Carl Ehrensvärd"
   
   ##########################
   # Traits/Leader_Desc/Nation_Desc/Super_Event_Shit
@@ -14,10 +30,15 @@
   # COSMETIC TAGS
   ##########################
 
+  ### SCIENTISTS ###
+
+  # PHYSICS
+  SWE_eric_tigerstedt: "Eric Tigerstedt"
+  
   ##########################
   # IDEAS
   ##########################
-  
+
   PB_SWE_Riket_Two:0 "Den Östra Rikshalvan"
   PB_SWE_Riket_Two_desc:0 ""Finns! Brothers! Your achievements are great, and the gratitude I express to you on behalf of all is just as great. – To interpret this would require an orator with all his skill – But I am a soldier. – Soldier! What a proud title! When I bear this title, by you – for you – and with you!" \n\n- §YC.G.E Mannerheim§!"
   PB_SWE_Swedish_Zaibatsu:0 "The Affärsimperium"
