--- a/localisation/english/PB_country_specific/PB_Sweden_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Sweden_l_english.yml
@@ -22,6 +22,9 @@
   SWE_alf_meyerhoffer: "Alf Meyerhöffer"
   SWE_carl_ehrensvard: "Carl Ehrensvärd"
   
+  ### ADMIRALS ###
+  SWE_charles_champs: "Charles de Champs"
+
   ##########################
   # Traits/Leader_Desc/Nation_Desc/Super_Event_Shit
   ##########################
@@ -41,7 +44,7 @@
 
   PB_SWE_Riket_Two:0 "Den Östra Rikshalvan"
   PB_SWE_Riket_Two_desc:0 ""Finns! Brothers! Your achievements are great, and the gratitude I express to you on behalf of all is just as great. – To interpret this would require an orator with all his skill – But I am a soldier. – Soldier! What a proud title! When I bear this title, by you – for you – and with you!" \n\n- §YC.G.E Mannerheim§!"
-  PB_SWE_Swedish_Zaibatsu:0 "The Affärsimperium"
+  PB_SWE_Swedish_Zaibatsu:0 "Affärsimperiumen"
   PB_SWE_Swedish_Zaibatsu_desc:0 "WIP"
   PB_SWE_Not_Flickering:0 "A Flickering Democracy"
   PB_SWE_Not_Flickering_desc:0 "After losing the §OThird Northern War§! in 1927, Swedish democracy entered a limbo that has lasted since the ink dried in Saint Petersburg. The Riksdag has entered a state of gridlock that multiple elections have failed to fix, with last year’s elections resulting in yet another hung parliament. The Swedish people, as a result of such a state of affairs, grow angrier and more radicalized as each day goes by. \n\nIt will take something §Ydrastic§! to save democracy in Sweden or else Scandinavia’s longest-standing democracy will §Rdescend into the abyss and be lost like so many others have in recent years.§!"
