--- a/localisation/english/PB_Generic_Focus_l_english.yml
+++ b/localisation/english/PB_Generic_Focus_l_english.yml
@@ -80,6 +80,70 @@ PB_Open_The_Nation_To_Investment: "Open the Nation to Investment"
 
 PB_Expanding_The_Scientific_Base: "Establish a New University"
 
+### MILITARY TREE ###
+
+PB_The_Necessity_Of_Military: "Necessity of a Military"
+
+PB_Addressing_The_Navy: "Addressing the Navy"
+
+PB_Design_New_Flagships: "Design New Flagships"
+
+PB_Increase_Small_Ship_Production: "Increase Small Ship Production"
+
+PB_Train_Admirals_For_Battle: "Train Admirals For Battle"
+
+PB_Expand_Dockyard_Facilities: "Expand Dockyard Facilities"
+
+PB_The_Carrier_Program: "Our Own Carrier Program"
+
+PB_The_Merchant_Fleet_Program: "The Merchant Fleet Program"
+
+PB_Masters_Of_The_Sea: "Masters of the Sea"
+
+PB_Ever_Evolving_Ground_War: "Ever Evolving Ground War"
+
+PB_The_Tried_And_Tested_Strategies: "Tried and Tested Strategies"
+
+PB_Raining_Fire_On_The_Front: "Raining Fire on the Front"
+
+PB_Build_Conscription_Centers: "New Conscription Methods"
+
+PB_Preparing_Our_Support_Units: "Preparing our Support Units"
+
+PB_Preparing_Bunker_Complexes: "Preparing Bunker Complexes"
+
+PB_Study_The_Great_War: "Study the Great War"
+
+PB_Embrace_The_Future_Of_War: "Embrace the Future of War"
+
+PB_Import_Foreign_Landship_Designs: "Import Foreign Landship Designs"
+
+PB_Fund_Scientific_Research: "Fund Scientific Research"
+
+PB_War_Of_Shock_And_Awe: "War of Shock and Awe"
+
+PB_Train_For_Vehicular_Warfare: "Train for Vehicular Warfare"
+
+PB_The_Future_Is_Now: "The Future is Now"
+
+PB_Take_To_The_Skies: "Take to the Skies"
+
+PB_Deepen_Pilot_Training_Programs: "Deepen Pilot Training Programs"
+
+PB_Innovative_Bomber_Designs: "Innovative Bomber Designs"
+
+PB_Improve_Fighter_Designs: "Improve Fighter Designs"
+
+PB_Designated_Aircraft_Production_Facilities: "Designated Aircraft Production Facilities"
+
+PB_Prep_For_Naval_Targeting: "Preparation for Naval Targeting"
+
+PB_Purchase_Foreign_Planes: "Purchase Planes Internationally"
+
+PB_AIR_At_The_Ready: "Air At the Ready"
+
+PB_Pursuit_Of_Destruction: "In Pursuit of Destruction"
+
 PB_generic_industry_start:0 "Invest In Industry"
 PB_generic_industry_start_desc:0 "It is vital that we invest into our industry. Threats loom in our society, it is necessary that we invest into research on how we improve our industry output so that we can keep up with our enemies and allies alike."
 
